--- a/ninja-food/public/index.html
+++ b/ninja-food/public/index.html
@@ -7,23 +7,40 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="text-gray-500 font-body">
-    <div class="grid md:grid-cols-3">
+    <div class="grid md:grid-cols-5">
       <!-- content wrapper -->
-      <div class="md:col-span-1">
-        <nav>
-          <div>
+      <div class="md:col-span-1 md:flex md:justify-end">
+        <nav class="text-right">
+          <div class="flex justify-between items-center">
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-              <a href="/">Food Ninja</a>
+              <a href="/" class="hover:text-gray-600">Food Ninja</a>
             </h1>
+            <div class="px-4 cursor-pointer md:hidden" id="burger">
+              <!-- md:hidden hides it in medium and larger screens -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                class="bi bi-list w-6"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+                />
+              </svg>
+            </div>
           </div>
-          <ul>
-            <li class="text-gray-700 font-bold">
-              <a href="#">
+          <ul class="text-sm mt-2 mb-2 hidden md:block" id="burgerMenu">
+            <li class="text-gray-700 font-bold py-2">
+              <a
+                href="#"
+                class="px-4 flex justify-end border-r-4 border-primary"
+              >
                 <span>Home</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="currentColor"
-                  class="bi bi-house-heart w-5"
+                  class="bi bi-house-heart w-5 ml-2"
                   viewBox="0 0 16 16"
                 >
                   <path
@@ -35,13 +52,13 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="py-2">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>About</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="currentColor"
-                  class="bi bi-patch-question w-5"
+                  class="bi bi-patch-question w-5 ml-2"
                   viewBox="0 0 16 16"
                 >
                   <path
@@ -54,14 +71,14 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="py-2">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>Contact</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="currentColor"
-                  class="bi bi-telephone"
-                  viewBox="0 0 16 16 w-5"
+                  class="bi bi-telephone w-5 ml-2"
+                  viewBox="0 0 16 16"
                 >
                   <path
                     d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"
@@ -74,12 +91,16 @@
       </div>
       <!-- end nav -->
 
-      <main class="px-16 py-6 bg-gray-100 md:col-span-2">
+      <main class="px-16 py-6 bg-gray-100 md:col-span-4">
         <div class="flex justify-center md:justify-end gap-3">
-          <a href="#" class="text-primary btn border-primary md:border-2"
+          <a
+            href="#"
+            class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Log In</a
           >
-          <a href="#" class="text-primary btn border-primary md:border-2"
+          <a
+            href="#"
+            class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Sign Up</a
           >
         </div>
@@ -101,7 +122,7 @@
             <!-- overflow-hidden class makes all of the corners rounded -->
             <!-- w-full class makes the width 100 % of the element's parent-->
             <!-- object-cover class removes the image distortion -->
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="img/stew.jpg"
                 alt="stew"
@@ -130,7 +151,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="img/noodles.jpg"
                 alt="noodles"
@@ -159,7 +180,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="img/curry.jpg"
                 alt="curry"
@@ -198,12 +219,15 @@
           </div>
 
           <div class="flex justify-center">
-            <button class="bg-secondary-100 text-secondary-200 btn">
+            <button
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
+            >
               Load more
             </button>
           </div>
         </div>
       </main>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
