--- a/ninja-food/public/index.html
+++ b/ninja-food/public/index.html
@@ -13,7 +13,7 @@
         <nav class="text-right">
           <div class="flex justify-between items-center">
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-              <a href="/" class="hover:text-gray-600">Food Ninja</a>
+              <a href="#" class="hover:text-gray-600">Food Ninja</a>
             </h1>
             <div class="px-4 cursor-pointer md:hidden" id="burger">
               <!-- md:hidden hides it in medium and larger screens -->
@@ -30,8 +30,11 @@
               </svg>
             </div>
           </div>
-          <ul class="text-sm mt-2 mb-2 hidden md:block" id="burgerMenu">
-            <li class="text-gray-700 font-bold py-2">
+          <ul
+            class="text-sm md:text-lg mt-2 mb-2 hidden md:block"
+            id="burgerMenu"
+          >
+            <li class="text-gray-700 font-bold py-2 md:py-5">
               <a
                 href="#"
                 class="px-4 flex justify-end border-r-4 border-primary"
@@ -52,7 +55,7 @@
                 </svg>
               </a>
             </li>
-            <li class="py-2">
+            <li class="py-2 md:py-5">
               <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>About</span>
                 <svg
@@ -71,7 +74,7 @@
                 </svg>
               </a>
             </li>
-            <li class="py-2">
+            <li class="py-2 md:py-5">
               <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>Contact</span>
                 <svg
@@ -95,24 +98,26 @@
         <div class="flex justify-center md:justify-end gap-3">
           <a
             href="#"
-            class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
+            class="text-primary btn border-primary border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Log In</a
           >
           <a
             href="#"
-            class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
+            class="text-primary btn border-primary border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Sign Up</a
           >
         </div>
 
         <header>
-          <h2 class="text-gray-700 text-6xl mb-5 font-semibold">Recipes</h2>
+          <h2 class="text-gray-700 text-6xl mt-5 mb-9 font-semibold">
+            Recipes
+          </h2>
           <h3 class="text-2xl font-semibold">For Ninjas</h3>
         </header>
 
         <div>
-          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
-            Lastest Recipes
+          <h4 class="font-bold mt-11 pb-2 border-b border-gray-200 text-lg">
+            Lastest Recipes:
           </h4>
 
           <div class="mt-8 grid lg:grid-cols-3 gap-10">
@@ -128,9 +133,9 @@
                 alt="stew"
                 class="w-full h-32 sm:h-48 object-cover"
               />
-              <div class="m-4">
+              <div class="m-4 flex flex-col gap-3">
                 <span>5 Bean Chilli Stew</span>
-                <span class="block text-gray-400 text-sm">Recipe by Mario</span>
+                <span class="text-gray-400 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
                 <!-- badge is a reusable class -->
@@ -157,9 +162,9 @@
                 alt="noodles"
                 class="w-full h-32 sm:h-48 object-cover"
               />
-              <div class="m-4">
+              <div class="m-4 flex flex-col gap-3">
                 <span>Veg Noodles</span>
-                <span class="block text-gray-400 text-sm">Recipe by Mario</span>
+                <span class="text-gray-400 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
                 <!-- badge is a reusable class -->
@@ -186,9 +191,9 @@
                 alt="curry"
                 class="w-full h-32 sm:h-48 object-cover"
               />
-              <div class="m-4">
+              <div class="m-4 flex flex-col gap-3">
                 <span>Tofu Curry</span>
-                <span class="block text-gray-400 text-sm">Recipe by Mario</span>
+                <span class="text-gray-400 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
                 <!-- badge is a reusable class -->
@@ -210,8 +215,8 @@
             </div>
           </div>
 
-          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
-            Most Popular Recipes
+          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200 text-lg">
+            Most Popular Recipes:
           </h4>
 
           <div class="mt-8">
